--- a/MyWhatsAppSeleniumProj/WebContent/WEB-INF/web.xml
+++ b/MyWhatsAppSeleniumProj/WebContent/WEB-INF/web.xml
@@ -2,10 +2,28 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
 <filter>
   <filter-name>CorsFilter</filter-name>
-  <filter-class>org.openqa.selenium.example.CORSFilter</filter-class>
+  <filter-class>cat.gomez.whatsapp.selenium.CORSFilter</filter-class>
 </filter>
 <filter-mapping>
   <filter-name>CorsFilter</filter-name>
   <url-pattern>*</url-pattern>
+</filter-mapping>
+<filter>
+    <filter-name>AuthenticationFilter</filter-name>
+    <filter-class>cat.gomez.authentication.AuthenticationFilter</filter-class>
+    <!-- Pre Shared Key (symmetric) -->
+    <init-param>
+        <param-name>pre-shared-key</param-name>
+        <param-value>changeit</param-value>
+    </init-param>
+    <!-- Expiration of Tokens (seconds) -->
+    <init-param>
+        <param-name>token-expire</param-name>
+        <param-value>600</param-value>
+    </init-param>
+</filter>
+<filter-mapping>
+    <filter-name>AuthenticationFilter</filter-name>
+    <url-pattern>*</url-pattern>
 </filter-mapping>
 </web-app>
