--- a/MyWhatsAppSeleniumProj/pom.xml
+++ b/MyWhatsAppSeleniumProj/pom.xml
@@ -43,6 +43,17 @@
 	      	<artifactId>javax.servlet-api</artifactId>
 	      	<version>3.1.0</version>
 	      </dependency>
+	      <dependency>
+	      	<groupId>javax.jms</groupId>
+	      	<artifactId>jms</artifactId>
+	      	<version>1.1</version>
+	      </dependency>
+	      <dependency>
+	      	<groupId>org.wildfly</groupId>
+	      	<artifactId>wildfly-ejb-client-bom</artifactId>
+	      	<version>8.1.0.Final</version>
+	      	<type>pom</type>
+	      </dependency>
         </dependencies>
   <build>
       <!-- Set the name of the war, used as the context root when the app 
