--- a/MyWhatsAppEJB/.classpath
+++ b/MyWhatsAppEJB/.classpath
@@ -28,6 +28,10 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="/MyWhatsAppSeleniumProj"/>
+	<classpathentry kind="src" path="/MyWhatsAppSeleniumProj">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
