--- a/MyWhatsAppEJB/pom.xml
+++ b/MyWhatsAppEJB/pom.xml
@@ -30,6 +30,14 @@
           <ejbVersion>3.2</ejbVersion>
         </configuration>
       </plugin>
+        <!-- The WildFly plugin deploys your war to a local WildFly container -->
+        <!-- To use, set the JBOSS_HOME environment variable and run:
+             mvn package wildfly:deploy -->
+        <plugin>
+            <groupId>org.wildfly.plugins</groupId>
+            <artifactId>wildfly-maven-plugin</artifactId>
+            <version>1.0.2.Final</version>
+        </plugin>
     </plugins>
   </build>
   <dependencies>
