--- a/MyWhatsAppSeleniumProj/pom.xml
+++ b/MyWhatsAppSeleniumProj/pom.xml
@@ -5,7 +5,7 @@
         <modelVersion>4.0.0</modelVersion>
         <groupId>MySel20Proj</groupId>
         <artifactId>MySel20Proj</artifactId>
-        <version>1.0</version>
+        <version>0.0.1-SNAPSHOT</version>
 	<properties>
       <!-- Explicitly declaring the source encoding eliminates the following 
          message: -->
@@ -18,12 +18,12 @@
        <version.org.jboss.spec.jboss.javaee.6.0>3.0.0.Final</version.org.jboss.spec.jboss.javaee.6.0>
 
        <!-- other plugin versions -->
-       <version.compiler.plugin>2.3.1</version.compiler.plugin>
-       <version.war.plugin>2.1.1</version.war.plugin>
+       <version.compiler.plugin>3.7.0</version.compiler.plugin>
+       <version.war.plugin>3.2.0</version.war.plugin>
 
        <!-- maven-compiler-plugin -->
-       <maven.compiler.target>1.6</maven.compiler.target>
-       <maven.compiler.source>1.6</maven.compiler.source>
+       <maven.compiler.target>1.8</maven.compiler.target>
+       <maven.compiler.source>1.8</maven.compiler.source>
    </properties>
         <dependencies>
         	<dependency>
@@ -31,27 +31,10 @@
         		<artifactId>selenium-java</artifactId>
         		<version>3.0.1</version>
         	</dependency>
-	      <!-- Import the Common Annotations API (JSR-250), we use provided scope 
-	         as the API is included in JBoss AS 7 -->
 	      <dependency>
-	      	<groupId>javax.inject</groupId>
-	      	<artifactId>javax.inject</artifactId>
-	      	<version>1.0-PFD-1</version>
-	      </dependency>
-	      <dependency>
-	      	<groupId>javax.servlet</groupId>
-	      	<artifactId>javax.servlet-api</artifactId>
-	      	<version>3.1.0</version>
-	      </dependency>
-	      <dependency>
-	      	<groupId>javax.jms</groupId>
-	      	<artifactId>jms</artifactId>
-	      	<version>1.1</version>
-	      </dependency>
-	      <dependency>
-	      	<groupId>org.wildfly</groupId>
-	      	<artifactId>wildfly-ejb-client-bom</artifactId>
-	      	<version>8.1.0.Final</version>
+	      	<groupId>org.wildfly.bom</groupId>
+	      	<artifactId>wildfly-javaee7</artifactId>
+	      	<version>10.1.1.Final</version>
 	      	<type>pom</type>
 	      </dependency>
         </dependencies>
@@ -67,16 +50,13 @@
                <!-- Java EE 6 doesn't require web.xml, Maven needs to catch 
                   up! -->
                <failOnMissingWebXml>false</failOnMissingWebXml>
+               <webResources>
+	               <resource>
+	               	<directory>WebContent</directory>
+	               </resource>
+               </webResources>
             </configuration>
          </plugin>
-         <!-- JBoss AS plugin to deploy war -->
-         <plugin>
-            <groupId>org.jboss.as.plugins</groupId>
-            <artifactId>jboss-as-maven-plugin</artifactId>
-            <version>${version.org.jboss.as.plugins.maven.plugin}</version>
-         </plugin>
-         <!-- Compiler plugin enforces Java 1.6 compatibility and activates 
-            annotation processors -->
          <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
              <version>${version.compiler.plugin}</version>
@@ -85,26 +65,15 @@
                  <target>${maven.compiler.target}</target>
             </configuration>
          </plugin>
-		<plugin>
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-dependency-plugin</artifactId>
-	        <version>3.0.2</version>
-	        <executions>
-	          <execution>
-	            <id>copy-dependencies</id>
-	            <phase>package</phase>
-	            <goals>
-	              <goal>copy-dependencies</goal>
-	            </goals>
-	            <configuration>
-	              <outputDirectory>${project.build.directory}/lib</outputDirectory>
-	              <overWriteReleases>false</overWriteReleases>
-	              <overWriteSnapshots>false</overWriteSnapshots>
-	              <overWriteIfNewer>true</overWriteIfNewer>
-	            </configuration>
-	          </execution>
-	        </executions>
-	      </plugin>
+        <!-- The WildFly plugin deploys your war to a local WildFly container -->
+        <!-- To use, set the JBOSS_HOME environment variable and run:
+             mvn package wildfly:deploy -->
+        <plugin>
+            <groupId>org.wildfly.plugins</groupId>
+            <artifactId>wildfly-maven-plugin</artifactId>
+            <version>1.0.2.Final</version>
+        </plugin>
       </plugins>
    </build>
+  <packaging>war</packaging>
 </project>
