--- a/MyWhatsAppEJB/pom.xml
+++ b/MyWhatsAppEJB/pom.xml
@@ -46,5 +46,10 @@
   		<artifactId>selenium-java</artifactId>
   		<version>3.0.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-api</artifactId>
+  		<version>1.7.7</version>
+  	</dependency>
   </dependencies>
 </project>
