Datamodel extended. New Rest interface to Users Entity

--- a/MyWhatsAppSeleniumProj/WebContent/WEB-INF/web.xml
+++ b/MyWhatsAppSeleniumProj/WebContent/WEB-INF/web.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <filter>
-    <filter-name>CorsFilter</filter-name>
-    <filter-class>cat.gomez.whatsapp.selenium.CORSFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>CorsFilter</filter-name>
-    <url-pattern>*</url-pattern>
-  </filter-mapping>
-  <filter>
-    <filter-name>AuthenticationFilter</filter-name>
-    <filter-class>cat.gomez.authentication.AuthenticationFilter</filter-class>
-    <init-param>
-      <param-name>pre-shared-key</param-name>
-      <param-value>changeit</param-value>
-    </init-param>
-    <init-param>
-      <param-name>token-expire</param-name>
-      <param-value>600</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>AuthenticationFilter</filter-name>
-    <url-pattern>*</url-pattern>
-  </filter-mapping>
+<web-app id="WebApp_ID" version="3.0"
+ xmlns="http://java.sun.com/xml/ns/javaee"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+ <filter>
+  <filter-name>CorsFilter</filter-name>
+  <filter-class>cat.gomez.whatsapp.selenium.CORSFilter</filter-class>
+ </filter>
+ <filter>
+  <filter-name>AuthenticationFilter</filter-name>
+  <filter-class>cat.gomez.authentication.AuthenticationFilter</filter-class>
+  <init-param>
+   <param-name>pre-shared-key</param-name>
+   <param-value>changeit</param-value>
+  </init-param>
+  <init-param>
+   <param-name>token-expire</param-name>
+   <param-value>600</param-value>
+  </init-param>
+ </filter>
+ <filter-mapping>
+  <filter-name>CorsFilter</filter-name>
+  <url-pattern>*</url-pattern>
+ </filter-mapping>
+ <filter-mapping>
+  <filter-name>AuthenticationFilter</filter-name>
+  <url-pattern>WhatsApp*</url-pattern>
+ </filter-mapping>
 </web-app>
