--- a/MyWhatsAppEJB/pom.xml
+++ b/MyWhatsAppEJB/pom.xml
@@ -51,5 +51,15 @@
   		<artifactId>slf4j-api</artifactId>
   		<version>1.7.7</version>
   	</dependency>
+  	<dependency>
+  		<groupId>ai.api</groupId>
+  		<artifactId>libai</artifactId>
+  		<version>1.6.12</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-jdk14</artifactId>
+  		<version>1.7.7</version>
+  	</dependency>
   </dependencies>
 </project>
