Integration with dialogFlow

--- a/MyWhatsAppEJB/ejbModule/config.properties
+++ b/MyWhatsAppEJB/ejbModule/config.properties
@@ -1,2 +1,4 @@
 CHROME_DRIVER_PATH = C:/Users/Javier/Documents/Mis Proyectos/WhatsAppSelenium/chromedriver.exe
 CHROME_USER_DATA_DIR = C:/Users/Javier/Documents/Mis Proyectos/WhatsAppSelenium/ChromeBrowser1
+DIALOGFLOW_KEY = a49071735a6247268b51545e5bc653c1
+MYNUMBER = 34625369980
