--- a/MyWhatsAppSeleniumProj/pom.xml
+++ b/MyWhatsAppSeleniumProj/pom.xml
@@ -1,83 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        <modelVersion>4.0.0</modelVersion>
-        <groupId>MySel20Proj</groupId>
-        <artifactId>MySel20Proj</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>MySel20Proj</groupId>
+	<artifactId>WhatsAppSelenium</artifactId>
+	<version>1.0</version>
 	<properties>
-      <!-- Explicitly declaring the source encoding eliminates the following 
-         message: -->
-      <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
-         resources, i.e. build is platform dependent! -->
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<!-- Explicitly declaring the source encoding eliminates the following 
+			message: -->
+		<!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
+			resources, i.e. build is platform dependent! -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-       <!-- JBoss dependency versions -->
-       <version.org.jboss.as.plugins.maven.plugin>7.2.Final</version.org.jboss.as.plugins.maven.plugin>
-       <version.org.jboss.spec.jboss.javaee.6.0>3.0.0.Final</version.org.jboss.spec.jboss.javaee.6.0>
+		<!-- JBoss dependency versions -->
+		<version.org.jboss.as.plugins.maven.plugin>7.2.Final</version.org.jboss.as.plugins.maven.plugin>
+		<version.org.jboss.spec.jboss.javaee.6.0>3.0.0.Final</version.org.jboss.spec.jboss.javaee.6.0>
 
-       <!-- other plugin versions -->
-       <version.compiler.plugin>3.7.0</version.compiler.plugin>
-       <version.war.plugin>3.2.0</version.war.plugin>
+		<!-- other plugin versions -->
+		<version.compiler.plugin>3.7.0</version.compiler.plugin>
+		<version.war.plugin>3.2.0</version.war.plugin>
 
-       <!-- maven-compiler-plugin -->
-       <maven.compiler.target>1.8</maven.compiler.target>
-       <maven.compiler.source>1.8</maven.compiler.source>
-   </properties>
-        <dependencies>
-        	<dependency>
-        		<groupId>org.seleniumhq.selenium</groupId>
-        		<artifactId>selenium-java</artifactId>
-        		<version>3.0.1</version>
-        	</dependency>
-	      <dependency>
-	      	<groupId>org.wildfly.bom</groupId>
-	      	<artifactId>wildfly-javaee7</artifactId>
-	      	<version>10.1.1.Final</version>
-	      	<type>pom</type>
-	      </dependency>
-	      <dependency>
-	      	<groupId>org.slf4j</groupId>
-	      	<artifactId>slf4j-api</artifactId>
-	      	<version>1.7.7</version>
-      	</dependency>
-        </dependencies>
-  <build>
-      <!-- Set the name of the war, used as the context root when the app 
-         is deployed -->
-      <plugins>
-         <plugin>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>${version.war.plugin}</version>
-            <configuration>
-               <!-- Java EE 6 doesn't require web.xml, Maven needs to catch 
-                  up! -->
-               <failOnMissingWebXml>false</failOnMissingWebXml>
-               <webResources>
-	               <resource>
-	               	<directory>WebContent</directory>
-	               </resource>
-               </webResources>
-            </configuration>
-         </plugin>
-         <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-             <version>${version.compiler.plugin}</version>
-             <configuration>
-                 <source>${maven.compiler.source}</source>
-                 <target>${maven.compiler.target}</target>
-            </configuration>
-         </plugin>
-        <!-- The WildFly plugin deploys your war to a local WildFly container -->
-        <!-- To use, set the JBOSS_HOME environment variable and run:
-             mvn package wildfly:deploy -->
-        <plugin>
-            <groupId>org.wildfly.plugins</groupId>
-            <artifactId>wildfly-maven-plugin</artifactId>
-            <version>1.0.2.Final</version>
-        </plugin>
-      </plugins>
-   </build>
-  <packaging>war</packaging>
+		<!-- maven-compiler-plugin -->
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.wildfly.bom</groupId>
+			<artifactId>wildfly-javaee7</artifactId>
+			<version>10.1.1.Final</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<!-- Set the name of the war, used as the context root when the app is 
+			deployed -->
+		<plugins>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>${version.war.plugin}</version>
+				<configuration>
+					<!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<webResources>
+						<resource>
+							<directory>WebContent</directory>
+						</resource>
+					</webResources>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${version.compiler.plugin}</version>
+				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
+				</configuration>
+			</plugin>
+			<!-- The WildFly plugin deploys your war to a local WildFly container -->
+			<!-- To use, set the JBOSS_HOME environment variable and run: mvn package 
+				wildfly:deploy -->
+			<plugin>
+				<groupId>org.wildfly.plugins</groupId>
+				<artifactId>wildfly-maven-plugin</artifactId>
+				<version>1.0.2.Final</version>
+			</plugin>
+			      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.2.1</version>
+        <configuration>
+          <webResources>
+            <resource>
+              <!-- this is relative to the pom.xml directory -->
+              <directory>resource2</directory>
+            </resource>
+          </webResources>
+        </configuration>
+      </plugin>
+		</plugins>
+	</build>
+	<packaging>war</packaging>
 </project>
